--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,17 @@
     box-sizing:border-box;
     font-family: "Montserrat",sans-serif;
   }
+
+  body{
+    background-color: #21233c;
+  }
+  
+  .wrapper{
+    width: 31 .25em;
+    position: absolute;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+  }
