--- a/styles.css
+++ b/styles.css
@@ -56,3 +56,18 @@
   .letter-N{
     right: 0.2em;
   }
+
+  .moon{
+    background-color: #f5f5f5;
+    height: 8em;
+    width: 8em;
+    border-radius: 50%;
+    -webkit-box-shadow:0 0 0 0.6em rgba(255,255,255,0.05),0 0 0 1.2em rgba(255,255,255,0.05),0 0 0 1.8em rgba(255,255,255,0.05);
+    box-shadow: 0 0 0 0.6em rgba(255,255,255,0.05),0 0 0 1.2em rgba(255,255,255,0.05),0 0 0 1.8em rgba(255,255,255,0.05);
+    position: absolute;
+    margin: auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+  }
