--- a/styles.css
+++ b/styles.css
@@ -98,3 +98,19 @@
     animation: spin 8s infinite linear;
   
   }
+
+  @-webkit-keyframes spin{
+    100%{
+      -webkit-transform: rotate(360deg);
+      transform: rotate(360deg);
+  
+    }
+  }
+  
+  @keyframes spin{
+    100%{
+      -webkit-transform: rotate(360deg);
+      transform: rotate(360deg);
+  
+    }
+  }
